some quality of life changes, clicking on the soltech logo brings you back to the base route

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <body>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <nav class="navbar fixed-top bg-body-tertiary navbar-expand-lg navbar-light bg-light px-3">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{{ url_for('base') }}">
             <img src="{{ fig_dir }}" width="80" height="30" class="d-inline-block align-text-top me-3">
             IDF Generator
         </a>
