changed the whole backend, removed a bunch of code with full functionality, used proper dicts, changed it to be compatible with the new update of the drawing tool

--- a/templates/about.html
+++ b/templates/about.html
@@ -13,6 +13,8 @@
         <ul>
             <li>Busbar thickness and string thickness are 0.3 mm and 1 mm respectively.</li>
             <li>Insulation thickness is 2 mm in height.</li>
+            <li>Range of Robot 1: 87deg;273deg</li>
+            <li>Range of Robot 2: -93deg;93deg</li>
     </p>
     <!-- Add more about content here -->
 </div>
