--- a/templates/manipulate.html
+++ b/templates/manipulate.html
@@ -52,7 +52,7 @@
                 {% set BusbarId1 = loop.index0 %}
                 <div class="row mb-2">
                     <div class="col">
-                        <button type="button" class="btn btn-danger" onclick="removeBusbar('{{ BusbarId1 }}', 1)">
+                        <button type="button" class="btn btn-danger" onclick="removeBusbar('{{ BusbarId1 }}', 1, '{{sbar}}')">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
                                 <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
                             </svg>
@@ -67,24 +67,24 @@
                     <div class="col">
                         <input type="checkbox" id="sbarheight_{{ sbar }}" name="sbarheight_{{ sbar }}" {% if sbar_checkboxes_height[sbar] %}checked{% endif %}>
                     </div>
-                    {% for corrected_component_placement in corrected_component_placements %}
-                        {% if corrected_component_placement.name == sbar %}
+                    {% for id, placement in corrected_component_placements.items() %}
+                        {% if placement.name == sbar %}
                             <div class="col">
-                                <input type="number" class="form-control" name="placement_{{ corrected_component_placement.name }}_0" placeholder="Enter a number" value="{{ corrected_component_placement.placement[0] }}">
+                                <input type="number" class="form-control" name="placement_{{ placement.name }}_0" placeholder="Enter a number" value="{{ placement.placement[0] }}">
                             </div>
                             <div class="col">
-                                <input type="number" class="form-control" name="placement_{{ corrected_component_placement.name }}_1" placeholder="Enter a number" value="{{ corrected_component_placement.placement[1] }}">
+                                <input type="number" class="form-control" name="placement_{{ placement.name }}_1" placeholder="Enter a number" value="{{ placement.placement[1] }}">
                             </div>
                             <div class="col">
-                                <input type="number" class="form-control" name="placement_{{ corrected_component_placement.name }}_2" placeholder="Enter a number" value="{{ corrected_component_placement.placement[2] }}">
+                                <input type="number" class="form-control" name="placement_{{ placement.name }}_2" placeholder="Enter a number" value="{{ placement.placement[2] }}">
                             </div>
-                            {% for corrected_component_outline in corrected_component_outlines %} 
-                                {% if corrected_component_outline.name == sbar %}
+                            {% for name, outline in corrected_component_outlines.items() %} 
+                                {% if name == sbar %}
                                     <div class="col">
-                                        <input type="number" class="form-control" name="outline_{{ corrected_component_outline.name }}_0" placeholder="Enter a number" value="{{ corrected_component_outline.coordinates[2,0] }}">
+                                        <input type="number" class="form-control" name="outline_{{ placement.name }}_0" placeholder="Enter a number" value="{{ outline.coordinates[2][0] }}">
                                     </div>
                                     <div class="col">
-                                        <input type="number" class="form-control" name="outline_{{ corrected_component_outline.name }}_1" placeholder="Enter a number" value="{{ corrected_component_outline.coordinates[2,1] }}">
+                                        <input type="number" class="form-control" name="outline_{{ placement.name }}_1" placeholder="Enter a number" value="{{ outline.coordinates[2][1] }}">
                                     </div>
                                 {% endif %}
                             {% endfor %}
@@ -99,7 +99,7 @@
                     {% set BusbarId2 = loop.index0 %}
                     <div class="row mb-2">
                         <div class="col">
-                            <button type="button" class="btn btn-danger" onclick="removeBusbar('{{ BusbarId2 }}', 2)">
+                            <button type="button" class="btn btn-danger" onclick="removeBusbar('{{ BusbarId2 }}', 2, '{{sbar}}')">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
                                     <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
                                 </svg>
@@ -114,26 +114,26 @@
                         <div class="col">
                             <input type="checkbox" name="new_sbarheight_{{ BusbarId2 }}" {% if sbar_checkboxes_height[sbar[0]] %}checked{% endif %}>
                         </div>
-                        {% for corrected_component_placement in corrected_component_placements %}
-                            {% if corrected_component_placement.name == sbar[0] %}
+                        {% for id, placement in corrected_component_placements.items() %}
+                            {% if placement.name == sbar[0] %}
                                 <div class="col">
-                                    <input type="number" class="form-control" name="placement_{{ corrected_component_placement.name }}_0" placeholder="Enter x" step="any" value="{{ corrected_component_placement.placement[0] }}">
+                                    <input type="number" class="form-control" name="placement_{{ placement.name }}_0" placeholder="Enter x" step="any" value="{{ placement.placement[0] }}">
                                 </div>
                                 <div class="col">
-                                    <input type="number" class="form-control" name="placement_{{ corrected_component_placement.name }}_1" placeholder="Enter y" step="any" value="{{ corrected_component_placement.placement[1] }}">
+                                    <input type="number" class="form-control" name="placement_{{ placement.name }}_1" placeholder="Enter y" step="any" value="{{ placement.placement[1] }}">
                                 </div>
                                 <div class="col">
-                                    <input type="number" class="form-control" name="placement_{{ corrected_component_placement.name }}_2" placeholder="Enter z" step="any" value="{{ corrected_component_placement.placement[2] }}">
+                                    <input type="number" class="form-control" name="placement_{{ placement.name }}_2" placeholder="Enter z" step="any" value="{{ placement.placement[2] }}">
                                 </div>
                             {% endif %}
                         {% endfor %}
-                        {% for corrected_component_outline in corrected_component_outlines %}
-                            {% if corrected_component_outline.name == sbar[0] %}
+                        {% for name, outline in corrected_component_outlines.items() %}
+                            {% if name == sbar[0] %}
                                 <div class="col">
-                                    <input type="number" class="form-control" name="outline_{{ corrected_component_outline.name }}_0" placeholder="Enter width" step="any" value="{{ corrected_component_outline.coordinates[2,0] }}">
+                                    <input type="number" class="form-control" name="outline_{{ name }}_0" placeholder="Enter width" step="any" value="{{ outline.coordinates[2][0] }}">
                                 </div>
                                 <div class="col">
-                                    <input type="number" class="form-control" name="outline_{{ corrected_component_outline.name }}_1" placeholder="Enter height" step="any" value="{{ corrected_component_outline.coordinates[2,1] }}">
+                                    <input type="number" class="form-control" name="outline_{{ name }}_1" placeholder="Enter height" step="any" value="{{ outline.coordinates[2][1] }}">
                                 </div>
                             {% endif %}
                         {% endfor %}
