--- a/templates/manipulate.html
+++ b/templates/manipulate.html
@@ -5,19 +5,20 @@
 {% block content %}
 <h1>Manipulate</h1>
 <form action="/submit_parameters" method="post" enctype="multipart/form-data">
-    {% if filename %}
-        {{ filename }}
-    {% endif %}
     <div class="row custom-col">
+        <fieldset class="row custom-col border border-2 rounded-0" style="border-color: #ccc">
+            <div class="row custom-col2" style="margin: 0;">
+                <p><strong>Active IDF:</strong></p>
+            </div>
+            <div class="row custom-col2" style="margin: 0;">
+                {% if filename %}
+                    <p>{{ filename }}</p>
+                {% endif %}
+            </div>
+        </fieldset>
         <fieldset class="row custom-col border border-2 rounded-0" style="border-color: #ccc">
             <legend>Strings</legend>
             {% if strings %}
-                {% for string in strings %}
-                <div class="col">
-                    <label for="string_{{ string }}">{{ string }}:</label>
-                    <input type="text" id="string_{{ string }}" name="string_{{ string }}" {% if new_string_names %} value="{{ new_string_names.get(string, '') }}" {% endif %}>
-                </div>
-                {% endfor %}
                 <div class="row custom-col2">
                     <div class="col"></div>
                     <div class="col"></div>
@@ -32,12 +33,6 @@
                     </div>
                     <div class="col">
                         <span>z</span>
-                    </div>
-                    <div class="col">
-                        <span>width</span>
-                    </div>
-                    <div class="col">
-                        <span>height</span>
                     </div>
                 </div>
                 {% for id, placement in corrected_component_placements.items() %}
@@ -71,16 +66,34 @@
                     <div class="col">
                         <input type="number" class="form-control" name="placement_{{ id }}_2" placeholder="Enter a number" value="{{ placement.placement[2] }}">
                     </div>
-                    {% for name, outline in corrected_component_outlines.items() %} 
-                    {% if name == placement.name %}
+                </div>
+                {% endif %}
+                {% endfor %}
+                <div class="row custom-col2">
+                <div class="col"></div>
+                <div class="col">new name</div>
+                <div class="col">
+                    <span>width</span>
+                </div>
+                <div class="col">
+                    <span>height</span>
+                </div>
+                </div>
+                {% for name, outline in corrected_component_outlines.items() %} 
+                {% if outline.component_type == "string" %}
+                <div class="row custom-col2">
                     <div class="col">
-                        <input type="number" class="form-control" name="outline_{{ id }}_0" placeholder="Enter a number" value="{{ outline.widthheight[0][0] }}">
+                        <label for="string_{{ name }}">{{ name }}:</label>
                     </div>
                     <div class="col">
-                        <input type="number" class="form-control" name="outline_{{ id }}_1" placeholder="Enter a number" value="{{ outline.widthheight[0][1] }}">
+                        <input type="text" class="form-control" id="string_{{ string }}" name="string_{{ string }}" {% if new_string_names %} value="{{ new_string_names.get(string, '') }}" {% endif %}>
                     </div>
-                    {% endif %}
-                    {% endfor %}
+                    <div class="col">
+                        <input type="number" class="form-control" name="outline_{{ name }}_0" placeholder="Enter a number" value="{{ outline.widthheight[0][0] }}">
+                    </div>
+                    <div class="col">
+                        <input type="number" class="form-control" name="outline_{{ name }}_1" placeholder="Enter a number" value="{{ outline.widthheight[0][1] }}">
+                    </div>
                 </div>
                 {% endif %}
                 {% endfor %}
