--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,6 +99,14 @@ legend {
     border: 1px solid #ccc; /* Optional: Add a border for better visibility */
     padding: 10px; /* Optional: Add some padding */
     background-color: #f8f9fa; /* Optional: Add a background color */
+    position: relative;
+}
+
+.copy-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 1;
 }
 
 .about-container {
