--- a/templates/manipulate.html
+++ b/templates/manipulate.html
@@ -67,7 +67,7 @@
                 {% if placement.component_type == "string" %}
                 <div class="row mb-2">
                     <div class="col">
-                        <button type="button" class="btn btn-danger" onclick="removeBusbar('{{string}}')">
+                        <button type="button" class="btn btn-danger" onclick="removeString('{{id}}')">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
                                 <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
                             </svg>
@@ -99,9 +99,10 @@
                 {% endfor %}
                 <div class="row mb-2" id="existing-rows"></div>
                 <div class="col">
-                    <button type="button" style="width: 500px;" class="btn btn-secondary" id="add-row-btn2">Add</button>
+                    <button type="button" style="width: 500px;" class="btn btn-secondary" id="add-row-btn">Add</button>
                 </div>
             {% endif %}
+            <div class="row mb-2" id="existing-rows"></div>
         </fieldset>
         <fieldset class="row custom-col border border-2 rounded-0" style="border-color: #ccc">
             <legend>Busbars</legend>
@@ -185,9 +186,9 @@
                 </div>
                 {% endfor %}
             {% endif %}
-            <div class="row mb-2" id="existing-rows"></div>
+            <div class="row mb-2" id="existing-rows2"></div>
             <div class="col">
-                <button type="button" style="width: 500px;" class="btn btn-secondary" id="add-row-btn">Add</button>
+                <button type="button" style="width: 500px;" class="btn btn-secondary" id="add-row-btn2">Add</button>
             </div>
         </fieldset>
     </div>
