--- a/templates/manipulate.html
+++ b/templates/manipulate.html
@@ -162,13 +162,13 @@
                     {% for id, placement in corrected_component_placements.items() %}
                         {% if placement.name == sbar %}
                             <div class="col">
-                                <input type="number" class="form-control" name="placement_{{ placement.name }}_0" placeholder="Enter a number" value="{{ placement.placement[0] }}">
+                                <input type="number" class="form-control" name="placement_{{ id }}_0" placeholder="Enter a number" value="{{ placement.placement[0] }}">
                             </div>
                             <div class="col">
-                                <input type="number" class="form-control" name="placement_{{ placement.name }}_1" placeholder="Enter a number" value="{{ placement.placement[1] }}">
+                                <input type="number" class="form-control" name="placement_{{ id }}_1" placeholder="Enter a number" value="{{ placement.placement[1] }}">
                             </div>
                             <div class="col">
-                                <input type="number" class="form-control" name="placement_{{ placement.name }}_2" placeholder="Enter a number" value="{{ placement.placement[2] }}">
+                                <input type="number" class="form-control" name="placement_{{ id }}_2" placeholder="Enter a number" value="{{ placement.placement[2] }}">
                             </div>
                             {% for name, outline in corrected_component_outlines.items() %} 
                                 {% if name == sbar %}
